# jellyfin-desktop

./: .clang-format  .clang-tidy  .dockerignore  .envrc  .gitignore  CEF_VERSION  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  justfile  renovate.json  result  shell.nix
src/: CMakeLists.txt  Cargo.toml  cli.cpp  common.h  event_dispatcher.cpp  event_dispatcher.h  event_queue.h  logging.cpp  logging.h  logging_linux.h  main.cpp  main_linux.cpp  main_sdl.cpp  mpv_event.h  mpv_handle.h  platform.h  platform_macos.mm  platform_wayland.cpp  platform_windows.cpp  settings.cpp  settings.h  shutdown.cpp  single_instance.cpp  single_instance.h  theme_color.h  titlebar_color.h  wake_event.h  window_activation.cpp  window_activation.h  window_geometry.cpp  window_geometry.h
src/browser/: about_browser.cpp  about_browser.h  app_menu.h  browser_stack.cpp  browser_stack.h  browsers.cpp  browsers.h  overlay_browser.cpp  overlay_browser.h  web_browser.cpp  web_browser.h
src/cef/: cef_app.cpp  cef_app.h  cef_app_linux.cpp  cef_app_linux.h  cef_app_sdl.cpp  cef_app_sdl.h  cef_client.cpp  cef_client.h  cef_client_linux.cpp  cef_client_linux.h  cef_client_sdl.cpp  cef_thread.cpp  cef_thread.h  helper_main.cpp  macos_pump.cpp  message_bus.cpp  message_bus.h  resource_handler.cpp  resource_handler.h
src/cjson/: .clang-tidy
src/cli/: Cargo.toml
src/cli/src/: lib.rs
src/clipboard_wayland/: Cargo.toml
src/color/: Cargo.toml
src/color/src/: lib.rs  theme.rs
src/compositor/: metal_compositor.h  metal_compositor.mm  opengl_compositor.cpp  opengl_compositor.h
src/compositor_core/src/: fullscreen.rs  lib.rs  transition.rs
src/config/: Cargo.toml  config.h
src/config/src/: lib.rs
src/context/: egl_context.cpp  egl_context.h  opengl_frame_context.cpp  wgl_context.cpp
src/gpu_paint/: Cargo.toml
src/gpu_paint/src/: context.rs  dmabuf_import.rs  lib.rs  painter.rs  types.rs
src/idle_inhibit_linux/: Cargo.toml
src/idle_inhibit_linux/src/: lib.rs
src/input/: Cargo.toml  browser_layer.h  dispatch.cpp  dispatch.h  hotkeys.cpp  input.h  input_macos.mm  input_wayland.cpp  input_windows.cpp  input_windows.h  input_x11.cpp  input_x11.h  sdl_to_vk.h
src/input/apple/: InputAppleMediaKeys.h  InputAppleMediaKeys.mm
src/input/src/: keysym.rs  lib.rs
src/input_wayland/: Cargo.toml
src/jellyfin/: Cargo.toml  device_profile.cpp
src/jellyfin/src/: lib.rs
src/jfn_cef/: Cargo.toml  build.rs
src/jfn_cef/src/: app.rs  app_menu.rs  bridge.rs  browsers.rs  business_about.rs  business_common.rs  business_overlay.rs  business_web.rs  client.rs  client_impl.rs  embedded_js.rs  ffi.rs  i18n.rs  injection.rs  ipc.rs  lib.rs  menu_ownership.rs  paint_scheduler.rs  platform_ops.rs  pump.rs  resource.rs  v8_handler.rs
src/jfn_rust/: Cargo.toml  build.rs
src/jfn_rust/src/: app.rs  browser_size.rs  cli.rs  lib.rs  main.rs  manager.rs  platform_install.rs  single_instance.rs  window_geometry.rs  wl_interpose.rs
src/linux_util/: Cargo.toml
src/linux_util/src/: dmabuf_probe.rs  egl_dyn.rs  lib.rs  wl_display_registry.rs
src/log_redact/: Cargo.toml
src/logging/: Cargo.toml  jfn_logging.h
src/macos/: Cargo.toml
src/macos/src/: lib.rs  (+5 more)
src/macos_sink/: Cargo.toml
src/menu/: Cargo.toml
src/mpv/: Cargo.toml  build.rs  event.cpp  event.h  handle.h
src/open_url_linux/: Cargo.toml
src/paths/: Cargo.toml
src/platform/: dcomp_browser_layer.cpp  dcomp_browser_layer.h  event_loop_linux.cpp  event_loop_linux.h  kde_decoration_palette.cpp  kde_decoration_palette.h  macos.mm  macos_app.mm  macos_layer.h  macos_layer.mm  platform.h  platform_ops.cpp  video_surface.h  wayland.cpp  wayland.h  wayland_browser_surface.cpp  wayland_browser_surface.h  wayland_subsurface.cpp  wayland_subsurface.h  windows.cpp  windows_overlay_layer.cpp  windows_overlay_layer.h  windows_video_layer.cpp  windows_video_layer.h  windows_video_surface.cpp  windows_video_surface.h  x11.cpp  x11_video_layer.cpp  x11_video_layer.h
src/platform_abi/: Cargo.toml
src/playback/: Cargo.toml  coordinator.cpp  coordinator.h  event.h  jfn_dispatcher.h  jfn_ingest.h  jfn_playback.h  sinks.h
src/player/: AlbumArtProvider.cpp  AlbumArtProvider.h  PlayerComponent.cpp  PlayerComponent.h  WaylandMpvPlayer.cpp  WaylandMpvPlayer.h  WaylandVulkanContext.cpp  WaylandVulkanContext.h  dcomp_renderer.cpp  dcomp_renderer.h  media_session.cpp  media_session.h  media_session_thread.cpp  media_session_thread.h  mpv_event_thread.cpp  mpv_event_thread.h  opengl_renderer.cpp  opengl_renderer.h  playback_coordinator.cpp  playback_coordinator.h  playback_event.h  playback_sinks.cpp  playback_sinks.h  playback_state_machine.cpp  playback_state_machine.h  player_router.cpp  player_router.h  track_resolver.cpp  track_resolver.h  video_render_controller.cpp  video_render_controller.h  video_renderer.h  video_stack.cpp  video_stack.h  vulkan_subsurface_renderer.cpp  vulkan_subsurface_renderer.h
src/signal_guard/: Cargo.toml
src/single_instance/: Cargo.toml
src/system/: SystemComponent.cpp
src/taskbar/: TaskbarComponentWin.cpp  TaskbarComponentWin.h
src/ui/: EventFilter.cpp  WindowManager.cpp  WindowManager.h  menu_overlay.cpp  webview.qml
src/wake_event/: Cargo.toml
src/wayland/: Cargo.toml  jfn_kde_palette.h  jfn_wl_core.h  jfn_wl_proxy.h
src/wayland_scale_probe/: Cargo.toml
src/web/: about.js  client-settings.js  connectivityHelper.js  disable-fullscreen-button.js  find-webclient.css  input-plugin.js  jmp-bus.js  mpv-audio-player.js  mpv-player-base.js  mpv-player-core.js  mpv-video-player.js  native-shim.js  overlay.css  overlay.html  overlay.js  overlay.lang.js  user-switch.js
src/windows/: Cargo.toml
src/windows_sink/: Cargo.toml
src/wlproxy/: Cargo.toml  wlproxy.h
src/x11/: Cargo.toml
src/xtask/: Cargo.toml
tests/: CMakeLists.txt  cli_test.cpp  jellyfin_api_test.cpp  mpris_projection_test.cpp  playback_coordinator_test.cpp  playback_state_machine_test.cpp  track_resolver_test.cpp
tests/web/: connectivity_helper_test.js  mpv_audio_player_test.js  mpv_player_core_test.js  mpv_video_player_test.js
(+255 files in other folders)
