[workspace]
resolver = "3"
members = [
    "cli",
    "config",
    "jellyfin",
    "jfn_rust",
    "log_redact",
    "open_url_linux",
    "paths",
    "signal_guard",
    "single_instance",
    "wake_event",
    "wayland_scale_probe",
    "wlproxy",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
