[workspace]
resolver = "3"
members = [
    "cli",
    "clipboard_wayland",
    "config",
    "idle_inhibit_linux",
    "input_wayland",
    "jellyfin",
    "jfn_rust",
    "logging",
    "open_url_linux",
    "paths",
    "playback",
    "signal_guard",
    "single_instance",
    "wayland_scale_probe",
    "wlproxy",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
