[package]
name = "jfn-cli"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jfn_cli"
crate-type = ["staticlib"]

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "error-context"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
