[package]
name = "jfn-jellyfin"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jfn_jellyfin"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
