[package]
name = "jfn-rust"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jfn_rust"
crate-type = ["staticlib"]

[dependencies]
jfn-cli = { path = "../cli" }
jfn-config = { path = "../config" }
jfn-jellyfin = { path = "../jellyfin" }
jfn-log-redact = { path = "../log_redact" }
jfn-paths = { path = "../paths" }
jfn-single-instance = { path = "../single_instance" }
jfn-wake-event = { path = "../wake_event" }

[target.'cfg(unix)'.dependencies]
jfn-signal-guard = { path = "../signal_guard" }

[target.'cfg(target_os = "linux")'.dependencies]
jfn-idle-inhibit-linux = { path = "../idle_inhibit_linux" }
jfn-open-url-linux = { path = "../open_url_linux" }
jfn-wayland-scale-probe = { path = "../wayland_scale_probe" }
jfn-wlproxy = { path = "../wlproxy" }
