[package]
name = "jfn-wlproxy"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_wlproxy"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true
wl-proxy = { git = "https://github.com/mahkoh/wl-proxy", features = ["all-protocols"] }
error_reporter = "1.0.0"
